Fixed display on tablet and margin-top of the text

--- a/src/sections/CareersHero/index.css
+++ b/src/sections/CareersHero/index.css
@@ -19,21 +19,22 @@
   margin-top: calc($spacing-224 - $navbar-height);
   margin-bottom: $spacing-136;
 
-  @include Breakpoint-tabletAndBelow {
-    display: none;
-  }
-}
-
-.title-mobile {
   @include Breakpoint-tabletOnly {
     margin-bottom: $spacing-84;
   }
 
   @include Breakpoint-mobileOnly {
+    display: none;
+  }
+}
+
+.title-mobile {
+  max-width: 80vw;
+  @include Breakpoint-mobileOnly {
     margin: $spacing-84 0;
   }
 
-  @include Breakpoint-desktopOnly {
+  @include Breakpoint-tabletAndAbove {
     display: none;
   }
 }
@@ -50,10 +51,14 @@
   position: relative;
 
   max-width: $eight-columns;
-  margin: $spacing-352 auto 0 auto;
+  margin: $spacing-136 auto 0 auto;
+
+  @include Breakpoint-tabletOnly {
+    margin-top: $spacing-84;
+  }
 
   @include Breakpoint-mobileOnly {
-    margin-top: $spacing-84;
+    margin-top: $spacing-32;
   }
 }
 
@@ -62,17 +67,18 @@
     margin-top: calc(-1 * ($spacing-224 + $spacing-20));
     margin-left: calc(-1 * $column-spacing);
   }
+
+  @include Breakpoint-tabletOnly {
+    margin-top: calc(-1 * ($spacing-136 + $spacing-52));
+    margin-left: calc(-1 * ($spacing-136 + $spacing-8));
+
+    transform: scaleY(0.8) scaleX(0.8);
+  }
+
   @include Breakpoint-mobileOnly {
-    margin-top: calc(-1 * $spacing-84);
+    margin-top: calc(-1 * ($spacing-136 + $spacing-20));
     margin-right: calc(-1 * ($spacing-136 + 2 * $spacing-20));
 
     transform: rotateY(-180deg) scaleY(0.3) scaleX(0.3);
-  }
-
-  @include Breakpoint-tabletOnly {
-    margin-top: calc(-1 * $spacing-84);
-    margin-right: calc(-1 * ($spacing-136 + $spacing-8));
-
-    transform: rotateY(-180deg) scaleY(0.8) scaleX(0.8);
   }
 }
